--- a/Test/src/main/webapp/Ex01.html
+++ b/Test/src/main/webapp/Ex01.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<h1>Test</h1>
-
-<h1>팀장 커밋</h1>
+	<h1>Test</h1>
+	<h1>팀장 커밋</h1>
+	<!-- 미리칸 커밋 -->
+	<h1>미리칸 커밋</h1>
 
 </body>
 </html>
